# dioxus-fluent-sysicon

./: Cargo.toml  ICON.md  ICON_TEMPLATE.md  LICENSE  README.md
assets/: .cursorignore
src/: generator.rs  lib.rs  parse_input.rs
