[package]
name = "dioxus-fluent-sysicon"
version = "0.1.0"
edition = "2024"
include = ["src/**", "assets/**", "Cargo.toml", "README*", "LICENSE*"]

[lib]
proc-macro = true

[dependencies]
syn = "2.0.106"
quote = "1.0.40"
proc-macro2 = "1.0.101"

[dependencies.html_parser]
version = "0.7.0"

[dependencies.rsx-rosetta]
version = "0.6.0-alpha.2"

[dependencies.dioxus-rsx]
version = "0.6"

[dependencies.dioxus-autofmt]
version = "0.6.2"

[dependencies.heck]
version = "0.5.0"
