[package]
name = "dioxus-fluent-sysicon"
version = "0.1.0"
edition = "2024"
include = ["src/**", "assets/**", "Cargo.toml", "*.md", "LICENSE*"]
description = "Microsoft Fluent System Icon for dioxus"
license-file = "./LICENSE"
repository = "https://githubg.com/rootfebri/dioxus-fluent-sysicon"

[lib]
proc-macro = true

[dependencies]
syn = "2.0.106"
quote = "1.0.40"
proc-macro2 = "1.0.101"
lazy_static = "1.5.0"

[dependencies.html_parser]
version = "0.7.0"

[dependencies.rsx-rosetta]
version = "0.6.0-alpha.2"

[dependencies.dioxus-rsx]
version = "0.6"

[dependencies.dioxus-autofmt]
version = "0.6.2"

[dependencies.heck]
version = "0.5.0"

[dependencies.base64]
version = "0.22.1"
